--- a/Requirements.txt
+++ b/Requirements.txt
@@ -3,3 +3,7 @@ Memberships
 * User should see link for pro plan on home page
 * Basic plan link should pointy to regular Devise sign up form
 * Pro plan link should point to custom sign up form
+
+ActiveRecord
+Parameters
+Subsitution
